--- a/src/projeto/form/FormPrincipal.form
+++ b/src/projeto/form/FormPrincipal.form
@@ -453,7 +453,7 @@
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Component id="jLabelimgFundo" alignment="0" pref="566" max="32767" attributes="0"/>
+              <Component id="jLabelimgFundo" alignment="0" pref="524" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
       </Layout>
@@ -490,7 +490,7 @@
                   <Component id="jLabelLogado" min="-2" pref="185" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jSeparatorUserFinal" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="500" max="32767" attributes="0"/>
+                  <EmptySpace pref="503" max="32767" attributes="0"/>
                   <Component id="jSeparatorData" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jLabelDataIcon" min="-2" max="-2" attributes="0"/>
@@ -500,9 +500,7 @@
                   <Component id="jLabelDate" min="-2" pref="82" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jSeparatorHora" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jLabel3" min="-2" pref="49" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="53" max="-2" attributes="0"/>
                   <Component id="jSeparatorHoraFinal" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jLabelTime" min="-2" pref="69" max="-2" attributes="0"/>
@@ -511,23 +509,20 @@
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" attributes="0">
-                  <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="103" alignment="1" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="jLabelDataIcon" alignment="1" min="-2" max="-2" attributes="0"/>
-                          <Component id="jSeparatorUser" alignment="1" max="32767" attributes="0"/>
-                          <Component id="jLabelLogado" alignment="1" max="32767" attributes="0"/>
-                          <Component id="jSeparatorUserFinal" alignment="1" max="32767" attributes="0"/>
-                          <Component id="jSeparatorData" alignment="1" max="32767" attributes="0"/>
-                          <Component id="jSeparatorDataFinal" alignment="1" max="32767" attributes="0"/>
-                          <Component id="jSeparatorHora" alignment="1" max="32767" attributes="0"/>
-                          <Component id="jSeparatorHoraFinal" alignment="1" max="32767" attributes="0"/>
-                          <Component id="jLabelDate" alignment="1" max="32767" attributes="0"/>
-                          <Component id="jLabelTime" alignment="1" max="32767" attributes="0"/>
-                          <Component id="jButtonUser" alignment="1" pref="0" max="32767" attributes="0"/>
-                      </Group>
-                      <Component id="jLabel3" alignment="1" min="-2" max="-2" attributes="0"/>
+              <Group type="102" alignment="1" attributes="0">
+                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Component id="jLabelDataIcon" alignment="1" min="-2" max="-2" attributes="0"/>
+                      <Component id="jSeparatorUser" alignment="1" max="32767" attributes="0"/>
+                      <Component id="jLabelLogado" alignment="1" max="32767" attributes="0"/>
+                      <Component id="jSeparatorUserFinal" alignment="1" max="32767" attributes="0"/>
+                      <Component id="jSeparatorData" alignment="1" max="32767" attributes="0"/>
+                      <Component id="jSeparatorDataFinal" alignment="1" max="32767" attributes="0"/>
+                      <Component id="jSeparatorHora" alignment="1" max="32767" attributes="0"/>
+                      <Component id="jSeparatorHoraFinal" alignment="1" max="32767" attributes="0"/>
+                      <Component id="jLabelDate" alignment="1" max="32767" attributes="0"/>
+                      <Component id="jLabelTime" alignment="1" max="32767" attributes="0"/>
+                      <Component id="jButtonUser" alignment="1" pref="0" max="32767" attributes="0"/>
                   </Group>
               </Group>
           </Group>
@@ -631,14 +626,6 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonUserActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JLabel" name="jLabel3">
-          <Properties>
-            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/projeto/icones/if_Clock_132697.png"/>
-            </Property>
-            <Property name="text" type="java.lang.String" value="Hora"/>
-          </Properties>
-        </Component>
       </SubComponents>
     </Container>
     <Container class="javax.swing.JPanel" name="jPanelAtalhos">
@@ -679,7 +666,7 @@
                   <Component id="jButton10" min="-2" pref="40" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
                   <Component id="jSeparator6" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="297" max="32767" attributes="0"/>
+                  <EmptySpace pref="296" max="32767" attributes="0"/>
                   <Component id="jSeparator8" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="jLabel2" min="-2" pref="222" max="-2" attributes="0"/>
